[package]
name = "qx-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
qx-app = { path = "../app" }
qx-storage = { path = "../storage" }
qx-transport = { path = "../transport" }
qx-identity = { path = "../identity" }
qx-domain = { path = "../domain" }
# Encoder + SVG renderer only; the `decoder` feature pulls rxing
# (~1.4 MB compressed) which we don't need on the FE — production
# scanning stays on `zxing-wasm` per `web/README.md`. The A/B parity
# harness runs from the native test target (codec with decoder on),
# not from this façade. Foundation issue #33 §"Bundle size".
qx-codec = { path = "../codec", default-features = false }
qx-validators = { path = "../validators" }
qx-contract = { path = "../contract" }
qx-observability = { path = "../observability" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Snapshot parsing for registry_open ("csv" format) — pure Rust, wasm-clean.
csv = { workspace = true }
time = { workspace = true }

# Browser clock + CSPRNG for the dispatch shell: the engine stamps
# created_at/printed_at (time -> js Date) and mints ids (getrandom ->
# crypto.getRandomValues). Target-gated so native builds are untouched.
[features]
# OFF by default — production FE stays decoder-free (zxing-wasm). The
# dual-engine A/B test bench builds with `--features decoder` to put the
# Rust rxing decode (`decode_image`) in the browser alongside zxing.
default = []
decoder = ["qx-codec/decoder"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
time = { workspace = true, features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

# Per ADR-024 + foundation issue #33: tightened release profile for
# the wasm bundle so the gzipped artifact stays under 1.5 MB. `opt-
# level = "z"` favours size over speed; the encoder + classifier hot
# paths still complete in microseconds in-browser. LTO + abort-on-
# panic shave a further ~10% over the workspace defaults.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
