# The Tauri v2 desktop shell per ADR-030 §3 ("Webview" bundle family):
# the webview loads the webapp bundle and its transport invokes the
# Rust app layer in-process — no HTTP hop.
[package]
name = "qx-desktop"
version = "0.1.0"
description = "Tauri v2 desktop shell over the qx app layer (ADR-030 §3)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
serde = { workspace = true }
serde_json = { workspace = true }

qx-app = { path = "../../crates/app" }
# `qx-cli` provides the production adapter wiring
# (`Wiring::from_config`) + observability init, same as the `pr`
# binary — the desktop shell never imports adapter crates directly
# (ADR-030 architectural invariant).
qx-cli = { path = "../../crates/cli" }
qx-config = { path = "../../crates/config" }
qx-observability = { path = "../../crates/observability" }
